[css-grid] Fix auto repeat with multiple tracks and gutters

The code that computes the number of auto repeat tracks wrongly assumes
that the second argument of the repeat() notation is a single track
function. That was true in the beginning, however specs were later on
modified to allow a <track-list>. We support a <track-list> as a second
argument since long ago but the code that computes the number of
auto-repeat tracks was never updated.

This patch modifies two places that relates to the gaps between the
auto-repeat tracks, which ensures the proper total length. 4 test
expected values in the auto-repeat-huge-grid.html are also modified.

BUG=813511

Change-Id: Iaf00e7d595a800f07cbe630868f30b82ad7fbd4d
Reviewed-on: https://chromium-review.googlesource.com/c/1393136
Commit-Queue: Manuel Rego <rego@igalia.com>
Reviewed-by: Manuel Rego <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#620278}
Former-commit-id: 67196393176e8c33b8e13380788b67a7d999f32d